--- a/index.html
+++ b/index.html
@@ -1342,94 +1342,88 @@
 
 
   <!-- Contact Section -->
-  <section id="contact" class="py-20 relative bg-white">
-    <div class="container mx-auto px-6">
-      <div class="text-center mb-16">
-        <h2 class="text-5xl font-bold text-gradient mb-6 fade-in-up">Get In Touch</h2>
-        <div class="w-24 h-1 bg-gradient-to-r from-emerald-400 to-green-500 mx-auto fade-in-up"></div>
-      </div>
+<section id="contact" class="py-20 relative bg-white">
+  <div class="container mx-auto px-6">
+    <div class="text-center mb-16">
+      <h2 class="text-5xl font-bold text-gradient mb-6 fade-in-up">Get In Touch</h2>
+      <div class="w-24 h-1 bg-gradient-to-r from-emerald-400 to-green-500 mx-auto fade-in-up"></div>
+    </div>
 
-      <div class="max-w-4xl mx-auto">
-        <div class="grid md:grid-cols-2 gap-12">
-          <div class="slide-in-left">
-            <h3 class="text-3xl font-bold text-gray-800 mb-6">Connect With Our Team</h3>
-            <p class="text-gray-600 text-lg mb-8 leading-relaxed">
-              Ready to revolutionize your farming practices? Contact us to learn more about ePaddy's
-              innovative solutions and how they can transform your agricultural operations.
-            </p>
+    <div class="max-w-4xl mx-auto">
+      <div class="grid md:grid-cols-2 gap-12">
+        <div class="slide-in-left">
+          <h3 class="text-3xl font-bold text-gray-800 mb-6">Connect With Our Team</h3>
+          <p class="text-gray-600 text-lg mb-8 leading-relaxed">
+            Ready to revolutionize your farming practices? Contact us to learn more about ePaddy's
+            innovative solutions and how they can transform your agricultural operations.
+          </p>
 
-            <div class="space-y-6">
-              <div class="flex items-center space-x-4">
-                <div
-                  class="w-12 h-12 bg-gradient-to-r from-emerald-400 to-green-500 rounded-full flex items-center justify-center text-white">
-                  📧
-                </div>
-                <div>
-                  <h4 class="font-semibold text-gray-800">Email</h4>
-                  <p class="text-gray-600">epaddy.project@gmail.com</p>
-                </div>
-              </div>
-
-              <div class="flex items-center space-x-4">
-                <div
-                  class="w-12 h-12 bg-gradient-to-r from-green-400 to-teal-500 rounded-full flex items-center justify-center text-white">
-                  📱
-                </div>
-                <div>
-                  <h4 class="font-semibold text-gray-800">Phone</h4>
-                  <p class="text-gray-600">+94 77 123 4567</p>
-                </div>
-              </div>
-
-              <div class="flex items-center space-x-4">
-                <div
-                  class="w-12 h-12 bg-gradient-to-r from-teal-400 to-emerald-500 rounded-full flex items-center justify-center text-white">
-                  📍
-                </div>
-                <div>
-                  <h4 class="font-semibold text-gray-800">Location</h4>
-                  <p class="text-gray-600">SLIIT, Malabe, Sri Lanka</p>
-                </div>
+          <div class="space-y-6">
+            <div class="flex items-center space-x-4">
+              <div class="w-12 h-12 bg-gradient-to-r from-emerald-400 to-green-500 rounded-full flex items-center justify-center text-white">📧</div>
+              <div>
+                <h4 class="font-semibold text-gray-800">Email</h4>
+                <p class="text-gray-600">epaddy.project@gmail.com</p>
               </div>
             </div>
-          </div>
 
-          <div class="slide-in-right">
-            <div
-              class="glass-effect p-8 rounded-3xl bg-gradient-to-br from-emerald-50 to-green-50 border border-emerald-200">
-              <form class="space-y-6">
-                <div>
-                  <label class="block text-gray-700 font-semibold mb-2">Name</label>
-                  <input type="text"
-                    class="w-full px-4 py-3 rounded-xl border border-emerald-200 focus:outline-none focus:ring-2 focus:ring-emerald-400 transition-all duration-300"
-                    placeholder="Your Name">
-                </div>
+            <div class="flex items-center space-x-4">
+              <div class="w-12 h-12 bg-gradient-to-r from-green-400 to-teal-500 rounded-full flex items-center justify-center text-white">📱</div>
+              <div>
+                <h4 class="font-semibold text-gray-800">Phone</h4>
+                <p class="text-gray-600">+94 77 123 4567</p>
+              </div>
+            </div>
 
-                <div>
-                  <label class="block text-gray-700 font-semibold mb-2">Email</label>
-                  <input type="email"
-                    class="w-full px-4 py-3 rounded-xl border border-emerald-200 focus:outline-none focus:ring-2 focus:ring-emerald-400 transition-all duration-300"
-                    placeholder="your.email@example.com">
-                </div>
-
-                <div>
-                  <label class="block text-gray-700 font-semibold mb-2">Message</label>
-                  <textarea rows="4"
-                    class="w-full px-4 py-3 rounded-xl border border-emerald-200 focus:outline-none focus:ring-2 focus:ring-emerald-400 transition-all duration-300"
-                    placeholder="Tell us about your farming needs..."></textarea>
-                </div>
-
-                <button type="submit"
-                  class="w-full bg-gradient-to-r from-emerald-400 to-green-500 text-white py-3 rounded-xl font-semibold hover:from-emerald-500 hover:to-green-600 transition-all duration-300 transform hover:scale-105 shadow-lg pulse-glow">
-                  Send Message
-                </button>
-              </form>
+            <div class="flex items-center space-x-4">
+              <div class="w-12 h-12 bg-gradient-to-r from-teal-400 to-emerald-500 rounded-full flex items-center justify-center text-white">📍</div>
+              <div>
+                <h4 class="font-semibold text-gray-800">Location</h4>
+                <p class="text-gray-600">SLIIT, Malabe, Sri Lanka</p>
+              </div>
             </div>
           </div>
         </div>
+
+        <div class="slide-in-right">
+          <div class="glass-effect p-8 rounded-3xl bg-gradient-to-br from-emerald-50 to-green-50 border border-emerald-200">
+            <form action="https://formsubmit.co/athapaththusakila@gmail.com" method="POST" class="space-y-6">
+              <input type="hidden" name="_captcha" value="false">
+              <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">
+
+              <div>
+                <label class="block text-gray-700 font-semibold mb-2">Name</label>
+                <input type="text" name="name" required
+                  class="w-full px-4 py-3 rounded-xl border border-emerald-200 focus:outline-none focus:ring-2 focus:ring-emerald-400 transition-all duration-300"
+                  placeholder="Your Name">
+              </div>
+
+              <div>
+                <label class="block text-gray-700 font-semibold mb-2">Email</label>
+                <input type="email" name="email" required
+                  class="w-full px-4 py-3 rounded-xl border border-emerald-200 focus:outline-none focus:ring-2 focus:ring-emerald-400 transition-all duration-300"
+                  placeholder="your.email@example.com">
+              </div>
+
+              <div>
+                <label class="block text-gray-700 font-semibold mb-2">Message</label>
+                <textarea name="message" rows="4" required
+                  class="w-full px-4 py-3 rounded-xl border border-emerald-200 focus:outline-none focus:ring-2 focus:ring-emerald-400 transition-all duration-300"
+                  placeholder="Tell us about your farming needs..."></textarea>
+              </div>
+
+              <button type="submit"
+                class="w-full bg-gradient-to-r from-emerald-400 to-green-500 text-white py-3 rounded-xl font-semibold hover:from-emerald-500 hover:to-green-600 transition-all duration-300 transform hover:scale-105 shadow-lg pulse-glow">
+                Send Message
+              </button>
+            </form>
+          </div>
+        </div>
+
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
 
   <!-- Footer -->
