--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 
           <div class="text-lg text-gray-700 leading-relaxed space-y-6">
             <p class="text-center text-xl font-semibold text-emerald-600 mb-8">
-              "How can we develop an integrated smart agriculture system that combines AI-powered disease detection,
+              "How can we develop an integrated smart agriculture system that combines ML-powered disease detection,
               IoT-based irrigation control, and real-time monitoring to optimize paddy farming in Sri Lanka?"
             </p>
 
@@ -531,7 +531,7 @@
           style="animation-delay: 0.4s;">
           <div class="text-5xl mb-6 text-teal-500 group-hover:scale-110 transition-transform duration-300">📈</div>
           <h3 class="text-2xl font-bold text-gray-800 mb-4">Growth Prediction</h3>
-          <p class="text-gray-600 leading-relaxed">AI-powered harvest stage forecasting for optimal resource allocation
+          <p class="text-gray-600 leading-relaxed">ML-powered harvest stage forecasting for optimal resource allocation
             and scheduling.</p>
         </div>
 
