--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
       <div class="slide-in-right max-w-4xl mx-auto">
         <p class="text-xl md:text-2xl text-gray-600 mb-12 leading-relaxed">
-          Transforming paddy farming through <span class="text-emerald-600 font-semibold">AI-powered insights</span>,
+          Transforming paddy farming through <span class="text-emerald-600 font-semibold">ML-powered insights</span>,
           <span class="text-green-600 font-semibold">IoT automation</span>, and
           <span class="text-teal-600 font-semibold">real-time monitoring</span> for sustainable agriculture in Sri
           Lanka.
@@ -342,10 +342,10 @@
           <div
             class="glass-effect p-8 rounded-3xl bg-gradient-to-br from-emerald-50 to-green-50 border border-emerald-200">
             <h3 class="text-3xl font-bold text-emerald-600 mb-6">Revolutionary Agriculture</h3>
-            <p class="text-gray-700 text-lg leading-relaxed mb-6">
+            <!-- <p class="text-gray-700 text-lg leading-relaxed mb-6">
               The <strong class="text-emerald-700">ePaddy</strong> project represents a quantum leap in agricultural
               technology,
-              integrating cutting-edge AI, IoT, and mobile technologies to create the most comprehensive
+              integrating cutting-edge ML, IoT, and mobile technologies to create the most comprehensive
               smart farming solution for Sri Lankan paddy cultivation.
             </p>
             <div class="space-y-4">
@@ -359,9 +359,13 @@
               </div>
               <div class="flex items-center space-x-3">
                 <div class="w-2 h-2 bg-teal-400 rounded-full pulse-glow"></div>
-                <span class="text-gray-700">AI-Powered Weather Predictions</span>
+                <span class="text-gray-700">ML-Powered Weather Predictions</span>
               </div>
-            </div>
+            </div> -->
+            <p class="text-gray-700 text-lg leading-relaxed mb-6">
+              The ePaddy project in Sri Lanka is a groundbreaking initiative that uses advanced technologies to support sustainable paddy cultivation. It uses Convolutional Neural Networks (CNN) to identify diseases, pest infestations, and crop growth stages, and Gradient Boosting algorithms for weather-based disease forecasting. An IoT-powered water management system uses ESP8266 microcontrollers and ultrasonic sensors for optimal irrigation, reducing water usage. Real-time soil quality monitoring is done using NPK sensors, which feed data to a machine learning model for crop recommendations. The solution is accessible through a user-friendly mobile application built with Flutter and connected to Firebase. This aims to increase productivity, enhance sustainability, and empower farmers with modern tools tailored to their needs.
+            </p>
+            
           </div>
         </div>
 
