--- a/index.html
+++ b/index.html
@@ -362,9 +362,10 @@
                 <span class="text-gray-700">ML-Powered Weather Predictions</span>
               </div>
             </div> -->
-            <p class="text-gray-700 text-lg leading-relaxed mb-6">
-              The ePaddy project in Sri Lanka is a groundbreaking initiative that uses advanced technologies to support sustainable paddy cultivation. It uses Convolutional Neural Networks (CNN) to identify diseases, pest infestations, and crop growth stages, and Gradient Boosting algorithms for weather-based disease forecasting. An IoT-powered water management system uses ESP8266 microcontrollers and ultrasonic sensors for optimal irrigation, reducing water usage. Real-time soil quality monitoring is done using NPK sensors, which feed data to a machine learning model for crop recommendations. The solution is accessible through a user-friendly mobile application built with Flutter and connected to Firebase. This aims to increase productivity, enhance sustainability, and empower farmers with modern tools tailored to their needs.
-            </p>
+            <p class="text-gray-700 text-lg leading-relaxed mb-6 text-justify">
+  The ePaddy project in Sri Lanka is a groundbreaking initiative that uses advanced technologies to support sustainable paddy cultivation. It uses Convolutional Neural Networks (CNN) to identify diseases, pest infestations, and crop growth stages, and Gradient Boosting algorithms for weather-based disease forecasting. An IoT-powered water management system uses ESP8266 microcontrollers and ultrasonic sensors for optimal irrigation, reducing water usage. Real-time soil quality monitoring is done using NPK sensors, which feed data to a machine learning model for crop recommendations. The solution is accessible through a user-friendly mobile application built with Flutter and connected to Firebase. This aims to increase productivity, enhance sustainability, and empower farmers with modern tools tailored to their needs.
+</p>
+
             
           </div>
         </div>
