change research gap content

--- a/index.html
+++ b/index.html
@@ -342,29 +342,10 @@
           <div
             class="glass-effect p-8 rounded-3xl bg-gradient-to-br from-emerald-50 to-green-50 border border-emerald-200">
             <h3 class="text-3xl font-bold text-emerald-600 mb-6">Revolutionary Agriculture</h3>
-            <!-- <p class="text-gray-700 text-lg leading-relaxed mb-6">
-              The <strong class="text-emerald-700">ePaddy</strong> project represents a quantum leap in agricultural
-              technology,
-              integrating cutting-edge ML, IoT, and mobile technologies to create the most comprehensive
-              smart farming solution for Sri Lankan paddy cultivation.
-            </p>
-            <div class="space-y-4">
-              <div class="flex items-center space-x-3">
-                <div class="w-2 h-2 bg-emerald-400 rounded-full pulse-glow"></div>
-                <span class="text-gray-700">95% Accurate Disease Detection with CNN</span>
-              </div>
-              <div class="flex items-center space-x-3">
-                <div class="w-2 h-2 bg-green-400 rounded-full pulse-glow"></div>
-                <span class="text-gray-700">Real-time IoT Water Management</span>
-              </div>
-              <div class="flex items-center space-x-3">
-                <div class="w-2 h-2 bg-teal-400 rounded-full pulse-glow"></div>
-                <span class="text-gray-700">ML-Powered Weather Predictions</span>
-              </div>
-            </div> -->
+            
             <p class="text-gray-700 text-lg leading-relaxed mb-6 text-justify">
-  The ePaddy project in Sri Lanka is a groundbreaking initiative that uses advanced technologies to support sustainable paddy cultivation. It uses Convolutional Neural Networks (CNN) to identify diseases, pest infestations, and crop growth stages, and Gradient Boosting algorithms for weather-based disease forecasting. An IoT-powered water management system uses ESP8266 microcontrollers and ultrasonic sensors for optimal irrigation, reducing water usage. Real-time soil quality monitoring is done using NPK sensors, which feed data to a machine learning model for crop recommendations. The solution is accessible through a user-friendly mobile application built with Flutter and connected to Firebase. This aims to increase productivity, enhance sustainability, and empower farmers with modern tools tailored to their needs.
-</p>
+              The ePaddy project in Sri Lanka is a groundbreaking initiative that uses advanced technologies to support sustainable paddy cultivation. It uses Convolutional Neural Networks (CNN) to identify diseases, pest infestations, and crop growth stages, and Gradient Boosting algorithms for weather-based disease forecasting. An IoT-powered water management system uses ESP8266 microcontrollers and ultrasonic sensors for optimal irrigation, reducing water usage. Real-time soil quality monitoring is done using NPK sensors, which feed data to a machine learning model for crop recommendations. The solution is accessible through a user-friendly mobile application built with Flutter and connected to Firebase. This aims to increase productivity, enhance sustainability, and empower farmers with modern tools tailored to their needs.
+            </p>
 
             
           </div>
@@ -401,9 +382,9 @@
                 <div class="flex items-start space-x-4">
                   <div class="w-3 h-3 bg-red-400 rounded-full mt-2 flex-shrink-0"></div>
                   <div>
-                    <h4 class="font-semibold text-gray-800 mb-2">Limited Disease Detection</h4>
-                    <p class="text-gray-600">Existing systems lack comprehensive AI-powered disease identification for
-                      Sri Lankan paddy varieties.</p>
+                    <h4 class="font-semibold text-gray-800 mb-2">Limited Disease Prediction</h4>
+                    <p class="text-gray-600">Existing systems lack comprehensive ML-powered disease prediction for
+                      Sri Lankan paddy disease varieties.</p>
                   </div>
                 </div>
                 <div class="flex items-start space-x-4">
@@ -418,8 +399,15 @@
                   <div class="w-3 h-3 bg-red-500 rounded-full mt-2 flex-shrink-0"></div>
                   <div>
                     <h4 class="font-semibold text-gray-800 mb-2">Fragmented Solutions</h4>
-                    <p class="text-gray-600">No integrated platform combining disease detection, irrigation control, and
+                    <p class="text-gray-600">No integrated platform combining disease & pest detection, irrigation control, and
                       growth monitoring.</p>
+                  </div>
+                </div>
+                <div class="flex items-start space-x-4">
+                  <div class="w-3 h-3 bg-red-500 rounded-full mt-2 flex-shrink-0"></div>
+                  <div>
+                    <h4 class="font-semibold text-gray-800 mb-2">Limited Pest Detection</h4>
+                    <p class="text-gray-600">Existing systems lack comprehensive ML-powered pest detection for Sri Lankan paddy pest varieties.</p>
                   </div>
                 </div>
               </div>
@@ -434,9 +422,9 @@
                 <div class="flex items-start space-x-4">
                   <div class="w-3 h-3 bg-emerald-400 rounded-full mt-2 flex-shrink-0"></div>
                   <div>
-                    <h4 class="font-semibold text-gray-800 mb-2">AI-Powered Detection</h4>
-                    <p class="text-gray-600">95% accurate CNN-based disease identification specifically trained for
-                      local paddy varieties.</p>
+                    <h4 class="font-semibold text-gray-800 mb-2">ML-Powered Prediction & Identification</h4>
+                    <p class="text-gray-600">95% accurate CNN-based disease identification and prediction specifically trained for
+                      local paddy disease varieties.</p>
                   </div>
                 </div>
                 <div class="flex items-start space-x-4">
@@ -451,8 +439,15 @@
                   <div class="w-3 h-3 bg-teal-400 rounded-full mt-2 flex-shrink-0"></div>
                   <div>
                     <h4 class="font-semibold text-gray-800 mb-2">Unified Platform</h4>
-                    <p class="text-gray-600">Complete ecosystem integrating mobile app, IoT sensors, and AI analytics in
+                    <p class="text-gray-600">Complete ecosystem integrating mobile app, IoT sensors, and ML analytics in
                       one solution.</p>
+                  </div>
+                </div>
+                <div class="flex items-start space-x-4">
+                  <div class="w-3 h-3 bg-teal-400 rounded-full mt-2 flex-shrink-0"></div>
+                  <div>
+                    <h4 class="font-semibold text-gray-800 mb-2">ML-Powered Prediction & Identification</h4>
+                    <p class="text-gray-600">95% accurate CNN-based pest identification and prediction specifically trained for local paddy pest varieties.</p>
                   </div>
                 </div>
               </div>
