--- a/index.html
+++ b/index.html
@@ -475,8 +475,7 @@
 
           <div class="text-lg text-gray-700 leading-relaxed space-y-6">
             <p class="text-center text-xl font-semibold text-emerald-600 mb-8">
-              "How can we develop an integrated smart agriculture system that combines ML-powered disease detection,
-              IoT-based irrigation control, and real-time monitoring to optimize paddy farming in Sri Lanka?"
+              "Farmers in Sri Lanka face many problems in managing paddy fields effectively. They struggle to identify diseases and pest infections early, which leads to crop damage and low harvests. It is also hard to maintain good soil quality and proper water levels without modern tools. Many farmers do not have access to timely information, quality seeds, or fertilizers, and they lack knowledge of modern farming methods. Because of these challenges, there is a need for a smart and easy-to-use system that can help farmers detect problems early, get the right treatments, and manage their paddy fields better."
             </p>
 
             <div class="grid md:grid-cols-3 gap-8 mt-12">
