add new research problem

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 
           <div class="text-lg text-gray-700 leading-relaxed space-y-6">
             <p class="text-center text-xl font-semibold text-emerald-600 mb-8">
-              "Farmers in Sri Lanka face many problems in managing paddy fields effectively. They struggle to identify diseases and pest infections early, which leads to crop damage and low harvests. It is also hard to maintain good soil quality and proper water levels without modern tools. Many farmers do not have access to timely information, quality seeds, or fertilizers, and they lack knowledge of modern farming methods. Because of these challenges, there is a need for a smart and easy-to-use system that can help farmers detect problems early, get the right treatments, and manage their paddy fields better."
+              "Sri Lankan paddy farmers face challenges like late detection of diseases and pests, poor soil and water management, and limited access to timely information and modern farming methods. These issues lead to low harvests and reduced productivity. Therefore, a smart and user-friendly system is needed to help farmers detect problems early, receive proper treatments, and manage their fields more effectively."
             </p>
 
             <div class="grid md:grid-cols-3 gap-8 mt-12">
