--- a/index.html
+++ b/index.html
@@ -494,6 +494,26 @@
                 <h4 class="font-bold text-gray-800 mb-3">Data Integration</h4>
                 <p class="text-gray-600">Lack of unified monitoring and decision support systems</p>
               </div>
+              <!-- Soil Quality Management -->
+            <div class="text-center">
+              <div class="text-4xl mb-4 text-green-500">🌱</div>
+              <h4 class="font-bold text-gray-800 mb-3">Soil Quality Management</h4>
+              <p class="text-gray-600">Limited access to real-time soil nutrient data affects crop selection</p>
+            </div>
+
+            <!-- Paddy Harvest Stage Prediction -->
+            <div class="text-center">
+              <div class="text-4xl mb-4 text-purple-500">📅</div>
+              <h4 class="font-bold text-gray-800 mb-3">Harvest Stage Prediction</h4>
+              <p class="text-gray-600">No predictive system for optimizing harvest timing and resources</p>
+            </div>
+
+            <!-- Pest Management -->
+            <div class="text-center">
+              <div class="text-4xl mb-4 text-yellow-500">🐛</div>
+              <h4 class="font-bold text-gray-800 mb-3">Pest Management</h4>
+              <p class="text-gray-600">Inadequate early warning systems lead to increased pesticide use</p>
+            </div>
             </div>
           </div>
         </div>
