--- a/index.html
+++ b/index.html
@@ -603,12 +603,13 @@
                   <p class="text-sm text-gray-600">Cross-platform mobile app development</p>
                 </div>
               </div>
-              <div class="flex items-center space-x-4 p-4 bg-gradient-to-r from-yellow-50 to-orange-50 rounded-xl">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="JavaScript"
+              <!-- Dart -->
+              <div class="flex items-center space-x-4 p-4 bg-gradient-to-r from-cyan-50 to-blue-50 rounded-xl">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Dart-logo.png" alt="Dart"
                   class="w-10 h-10" />
                 <div>
-                  <h4 class="font-semibold text-gray-800">JavaScript</h4>
-                  <p class="text-sm text-gray-600">Interactive UI and logic on frontend</p>
+                  <h4 class="font-semibold text-gray-800">Dart</h4>
+                  <p class="text-sm text-gray-600">Flutter’s native programming language for UI & logic</p>
                 </div>
               </div>
             </div>
@@ -652,6 +653,15 @@
                   <p class="text-sm text-gray-600">Public tunneling for localhost APIs</p>
                 </div>
               </div>
+              <!-- OpenWeather API -->
+              <div class="flex items-center space-x-4 p-4 bg-gradient-to-r from-cyan-50 to-sky-50 rounded-xl">
+                <img src="https://openweathermap.org/themes/openweathermap/assets/img/logo_white_cropped.png"
+                  alt="OpenWeather API" class="w-10 h-10 bg-white rounded shadow" />
+                <div>
+                  <h4 class="font-semibold text-gray-800">OpenWeather API</h4>
+                  <p class="text-sm text-gray-600">Live weather data integration for disease forecasting</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -659,7 +669,7 @@
         <!-- IoT & Infrastructure -->
         <div class="fade-in-up" style="animation-delay: 0.4s;">
           <div class="card-hover glass-effect p-8 rounded-3xl bg-white border border-emerald-200 h-full">
-            <h3 class="text-2xl font-bold text-teal-600 mb-6 text-center">IoT & Infrastructure</h3>
+            <h3 class="text-2xl font-bold text-teal-600 mb-6 text-center">IoT & Database</h3>
             <div class="space-y-4">
               <div class="flex items-center space-x-4 p-4 bg-gradient-to-r from-teal-50 to-cyan-50 rounded-xl">
                 <img src="assets/images/arduino-svgrepo-com.svg" alt="Arduino"
@@ -677,19 +687,23 @@
                   <p class="text-sm text-gray-600">Realtime DB + Authentication</p>
                 </div>
               </div>
-              <div class="flex items-center space-x-4 p-4 bg-gradient-to-r from-lime-50 to-green-50 rounded-xl">
-                <img src="assets/images/npk-fertilizer.svg" alt="NPK Sensors"
+              <!-- C++ -->
+              <div class="flex items-center space-x-4 p-4 bg-gradient-to-r from-indigo-50 to-purple-50 rounded-xl">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C%2B%2B_Logo.svg" alt="C++"
                   class="w-10 h-10" />
                 <div>
-                  <h4 class="font-semibold text-gray-800">NPK & Ultrasonic Sensors</h4>
-                  <p class="text-sm text-gray-600">Soil quality + water level measurement</p>
+                  <h4 class="font-semibold text-gray-800">C++</h4>
+                  <p class="text-sm text-gray-600">Sensor control and serial communication</p>
                 </div>
               </div>
-              <div class="flex items-center space-x-4 p-4 bg-gradient-to-r from-teal-50 to-green-50 rounded-xl">
-                <img src="assets/images/water.svg" alt="Water Management Gate" class="w-10 h-10" />
+
+              <!-- Twilio -->
+              <div class="flex items-center space-x-4 p-4 bg-gradient-to-r from-pink-50 to-red-50 rounded-xl">
+                <img src="https://www.vectorlogo.zone/logos/twilio/twilio-icon.svg" alt="Twilio"
+                  class="w-10 h-10" />
                 <div>
-                  <h4 class="font-semibold text-gray-800">Water Management Gate</h4>
-                  <p class="text-sm text-gray-600">Automated irrigation using motorized gate control</p>
+                  <h4 class="font-semibold text-gray-800">Twilio Alerts</h4>
+                  <p class="text-sm text-gray-600">Sends SMS notifications to farmers in real-time</p>
                 </div>
               </div>
             </div>
@@ -700,12 +714,8 @@
       <!-- Development Tools -->
       <div class="mt-12 fade-in-up">
         <h3 class="text-3xl font-bold text-center text-gray-800 mb-8">Development Environment</h3>
-        <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-5">
-          <div class="tech-icon glass-effect p-6 rounded-2xl text-center card-hover bg-white border border-emerald-200">
-            <img src="https://cdn.iconscout.com/icon/free/png-256/expo-5-1175229.png" alt="Expo"
-              class="w-10 h-10 mx-auto mb-2" />
-            <div class="text-sm font-medium text-gray-700">Expo CLI</div>
-          </div>
+        <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-5">
+          
           <div class="tech-icon glass-effect p-6 rounded-2xl text-center card-hover bg-white border border-emerald-200">
             <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="Git"
               class="w-10 h-10 mx-auto mb-2" />
