--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 <div class="flex items-start space-x-4">
                   <div class="w-3 h-3 bg-emerald-400 rounded-full mt-2 flex-shrink-0"></div>
                   <div>
-                    <h4 class="font-semibold text-gray-800 mb-2">ML-Powered Prediction & Identification</h4>
+                    <h4 class="font-semibold text-gray-800 mb-2">ML-Powered Disease Prediction & Identification</h4>
                     <p class="text-gray-600">95% accurate CNN-based disease identification and prediction specifically trained for
                       local paddy disease varieties.</p>
                   </div>
@@ -446,7 +446,7 @@
                 <div class="flex items-start space-x-4">
                   <div class="w-3 h-3 bg-teal-400 rounded-full mt-2 flex-shrink-0"></div>
                   <div>
-                    <h4 class="font-semibold text-gray-800 mb-2">ML-Powered Prediction & Identification</h4>
+                    <h4 class="font-semibold text-gray-800 mb-2">ML-Powered Pest Identification</h4>
                     <p class="text-gray-600">95% accurate CNN-based pest identification and prediction specifically trained for local paddy pest varieties.</p>
                   </div>
                 </div>
