--- a/index.html
+++ b/index.html
@@ -1187,13 +1187,8 @@
           <div class="card-hover group fade-in-up" style="animation-delay: 0.4s;">
             <div class="relative overflow-hidden rounded-3xl bg-white shadow-xl border border-emerald-100">
               <div class="aspect-[9/16] bg-gradient-to-br from-purple-100 to-pink-100 flex items-center justify-center">
-                <div class="text-center p-8">
-                  <div
-                    class="w-16 h-16 bg-gradient-to-r from-purple-400 to-pink-500 rounded-full flex items-center justify-center text-white text-2xl mb-4 mx-auto">
-                    📊</div>
-                  <h4 class="font-bold text-gray-800 mb-2">Analytics Dashboard</h4>
-                  <p class="text-gray-600 text-sm">Comprehensive farm insights</p>
-                </div>
+                <img src="assets/images/disease-ui.jpeg" alt="Field Research"
+                  class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
               </div>
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
@@ -1209,13 +1204,8 @@
           <div class="card-hover group fade-in-up" style="animation-delay: 0.6s;">
             <div class="relative overflow-hidden rounded-3xl bg-white shadow-xl border border-emerald-100">
               <div class="aspect-[9/16] bg-gradient-to-br from-orange-100 to-red-100 flex items-center justify-center">
-                <div class="text-center p-8">
-                  <div
-                    class="w-16 h-16 bg-gradient-to-r from-orange-400 to-red-500 rounded-full flex items-center justify-center text-white text-2xl mb-4 mx-auto">
-                    🌤️</div>
-                  <h4 class="font-bold text-gray-800 mb-2">Weather Forecast</h4>
-                  <p class="text-gray-600 text-sm">7-day prediction system</p>
-                </div>
+                <img src="assets/images/alert-ui.jpeg" alt="Field Research"
+                  class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
               </div>
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
@@ -1232,13 +1222,8 @@
             <div class="relative overflow-hidden rounded-3xl bg-white shadow-xl border border-emerald-100">
               <div
                 class="aspect-[9/16] bg-gradient-to-br from-indigo-100 to-purple-100 flex items-center justify-center">
-                <div class="text-center p-8">
-                  <div
-                    class="w-16 h-16 bg-gradient-to-r from-indigo-400 to-purple-500 rounded-full flex items-center justify-center text-white text-2xl mb-4 mx-auto">
-                    🎯</div>
-                  <h4 class="font-bold text-gray-800 mb-2">Growth Tracking</h4>
-                  <p class="text-gray-600 text-sm">Monitor crop development</p>
-                </div>
+                <img src="assets/images/phase-ui.jpeg" alt="Field Research"
+                  class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
               </div>
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
@@ -1255,13 +1240,8 @@
             <div class="relative overflow-hidden rounded-3xl bg-white shadow-xl border border-emerald-100">
               <div
                 class="aspect-[9/16] bg-gradient-to-br from-green-100 to-emerald-100 flex items-center justify-center">
-                <div class="text-center p-8">
-                  <div
-                    class="w-16 h-16 bg-gradient-to-r from-green-400 to-emerald-500 rounded-full flex items-center justify-center text-white text-2xl mb-4 mx-auto">
-                    🔔</div>
-                  <h4 class="font-bold text-gray-800 mb-2">Smart Alerts</h4>
-                  <p class="text-gray-600 text-sm">Instant notifications</p>
-                </div>
+                <img src="assets/images/pest-ui.jpeg" alt="Field Research"
+                  class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
               </div>
               <div
                 class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-all duration-300 flex items-end">
